hard-gists/1876859/run.log
=== Docker Run Log for 1876859 ===
Started at: Mi 29. Okt 12:32:09 CET 2025

[2025-10-29 12:32:09] START: Running container for 1876859
[2025-10-29 12:32:10] SUCCESS: Container e20293eb3e9d3406bbeca1f84835caaefa7fe57cacb27cdf52f4232c54736621 started for 1876859
=== Container logs for 1876859 ===
  File "/snippet.py", line 21
    print "%s %s %s:%s%s" % tuple(target)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1876859 ===
[2025-10-29 12:32:12] INFO: Container e20293eb3e9d3406bbeca1f84835caaefa7fe57cacb27cdf52f4232c54736621 has stopped
